# KGCN

./: README.md  run_preprocessing.py  setup.cfg
python/kgcn/: __init__.py  data_loading.py  preprocessing.py  training.py  types.py  util.py
python/kgcn/layers/: __init__.py  aggregator.py  neighborhood.py
python/kgcn/model/: kgcn.py
python/kgcn/modeling/layers/: __init__.py
python/kgcn/modeling/models/: __init__.py  kgcn.py
python/kgcn/models/: __init__.py
tests/: test_preprocessing.py
tests/data/: test_item_index2entity_id.txt  test_kg.txt  test_ratings.csv
