[metadata]
name = kgcn
version = attr: kgcn.__version__.__version__
author = Kanchi Shimono
author_email = dev.kanchi.shimono@gmail.com
description = Tensorflow 2.0 implementation of Knowledge Graph Convolutional Networks for Recommender Systems
long_description = flie: README.md
url = https://github.com/KanchiShimono/KGCN
license = MIT

[options]
python_requires = >=3.7
package_dir =
  = python
packages = find:
install_requires =
  tensorflow >= 2.1.0
  numpy
  pandas
  scikit-learn
  absl-py
  python-json-logger

[options.extras_require]
dev =
  mypy
  flake8
  yapf
  isort
  pytest

[options.packages.find]
where = python
