[metadata]
name = kgcn
version = attr: kgcn.__version__.__version__
author = Kanchi Shimono
author_email = dev.kanchi.shimono@gmail.com
description = Tensorflow 2.0 implementation of Knowledge Graph Convolutional Networks for Recommender Systems
long_description = file: README.md
url = https://github.com/KanchiShimono/KGCN
license = MIT

[options]
python_requires = >=3.7
package_dir =
  = python
packages = find:
install_requires =
  tensorflow >= 2.1.0
  numpy
  pandas
  scikit-learn
  absl-py
  python-json-logger

[options.extras_require]
dev =
  mypy
  flake8
  yapf
  isort
  pytest

test =
  mypy
  flake8
  isort
  pytest

[options.packages.find]
where = python

[flake8]
max-complexity = 10

[isort]
balanced_wrapping = True
multi_line_output = 6

[mypy]
namespace_packages = True
show_column_numbers = True
ignore_missing_imports = True
# The fllowing options are enabled by --strict option
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True
